Updata listing from the book